--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,10 @@
     "description": "Elgg plugin that allows admin users to login as another user.",
     "license": "GPL-2.0",
     "keywords": ["elgg", "plugin"],
+    "support": {
+		"source": "https://github.com/elgg/login_as",
+		"issues": "https://github.com/elgg/login_as/issues"
+	},
     "authors": [
         {
             "name": "Brett Profitt",
@@ -11,6 +15,9 @@
         }
     ],
     "require": {
-      "composer/installers": ">=1.0.8"
-    }
+ 		"composer/installers": "^1.0.8"
+    },
+	"conflict": {
+		"elgg/elgg": "<3.0"
+	}
 }
