--- a/composer.json
+++ b/composer.json
@@ -4,20 +4,15 @@
     "description": "Elgg plugin that allows admin users to login as another user.",
     "license": "GPL-2.0-only",
     "keywords": ["elgg", "plugin"],
+    "homepage": "https://elgg.org/",
     "support": {
 		"source": "https://github.com/elgg/login_as",
 		"issues": "https://github.com/elgg/login_as/issues"
 	},
-    "authors": [
-        {
-            "name": "Brett Profitt",
-            "email": "brett@elgg.org"
-        }
-    ],
     "require": {
  		"composer/installers": "^1.0.8"
     },
 	"conflict": {
-		"elgg/elgg": "<3.0"
+		"elgg/elgg": "<4.0"
 	}
 }
